--- a/package.json
+++ b/package.json
@@ -4,15 +4,17 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "expo": "~52.0.42",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.8"
+    "react-native": "0.76.8",
+    "react-native-webview": "13.12.5",
+    "expo-location": "~18.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
